dhall/tests/type-inference/failure/unit/OperatorPlusNotNatural.txt
Type error: error: BinOpTypeMismatch
 --> <current file>:1:1
  |
1 | True + True
  | ^^^^^^^^^^^ BinOpTypeMismatch
  |
